# hotgaze

./: .gitignore  CHANGELOG.md  LICENSE  LICENSES-THIRD-PARTY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
scripts/: generate_fixtures.py
src/hotgaze/: __init__.py  _imageops.py  attention_map.py  cli.py  config.py  engine.py  render.py  scoring.py  weights.py
src/hotgaze/_unisal/: __init__.py  _cgru.py  _mobilenet.py  _model.py
src/hotgaze/layers/: __init__.py  base.py  center_bias.py  contrast.py  faces.py  gaze_flow.py  saliency_deep.py  saliency_fast.py  text.py
src/hotgaze/schemas/: score.schema.json
tests/: conftest.py  test_cli.py  test_compare.py  test_deep.py  test_engine.py  test_integration.py  test_layers.py  test_optional.py  test_perf.py  test_scoring.py  test_trivial.py  test_weights.py
