[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotgaze"
version = "0.1.0"
description = "Predict visual attention on UI screenshots — heatmap overlays and machine-readable attention scores"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Surya Kosaraju"},
]
keywords = ["attention", "heatmap", "saliency", "ui", "ux", "eye-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
deep = ["torch>=2.0"]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "scikit-image>=0.22",
    "actionlint-py>=1.7",
]

[project.scripts]
hotgaze = "hotgaze.cli:main"

[project.urls]
Homepage = "https://github.com/suryakosaraju/hotgaze"
Repository = "https://github.com/suryakosaraju/hotgaze"

[tool.hatch.build.targets.wheel]
packages = ["src/hotgaze"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["src/hotgaze/_unisal/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["hotgaze"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m \"not perf and not deep\""
markers = [
    "perf: performance tests (excluded from CI)",
    "deep: tests requiring the deep backend (excluded from CI)",
]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_any_generics = false
files = ["src/hotgaze"]
exclude = ["src/hotgaze/_unisal/"]

[[tool.mypy.overrides]]
module = [
    "cv2",
    "cv2.*",
    "torch",
    "torch.*",
    "torchvision",
    "torchvision.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "onnxruntime",
    "onnxruntime.*",
]
ignore_missing_imports = true
